--- a/arboles-binarios/index.html
+++ b/arboles-binarios/index.html
@@ -44,6 +44,14 @@
                 <div id="postorder"></div>
             </form>
         </article>
+        <article>
+            <h2>Búsqueda</h2>
+            <form id="form5" method="POST">
+                <input id="rNum" type="number" required placeholder="0"><br>
+                <input type="submit"><br>
+                <div id="num"></div>
+            </form>
+        </article>
     </section>
 
     <script src="index.js" type="module"></script>
